--- a/app/views/games/_giving_game_form.html.erb
+++ b/app/views/games/_giving_game_form.html.erb
@@ -53,11 +53,17 @@
                 </div>
             </div>
             
-            <div class=form-header>Expiration Date</div>
-            <div class='field-form-group'><%= text_field :game, :expiration_time, "data-provide" => 'datepicker' %></div>
-    
-            <div class=form-header>Tutorial?</div>
-            <div class='field-form-group'><%= check_box :game, :tutorial, {}, true, false %></div>
+            <div class="row">
+                <div class=form-header>Expiration Date</div>
+                <div class='field-form-group'><%= text_field :game, :expiration_time, "data-provide" => 'datepicker' %></div>
+            </div>
+            
+            <div class="row">
+                <div class=form-header>Tutorial?</div>
+                <div class='field-form-group'><%= check_box :game, :tutorial, {}, true, false %></div>
+            </div>
 
-            <div class=form-header>Show Results?</div>
-            <div class='field-form-group'><%= check_box :game, :show_results, {}, true, false %></div>
+            <div class="row">
+                <div class=form-header>Show Results?</div>
+                <div class='field-form-group'><%= check_box :game, :show_results, {}, true, false %></div>
+            </div>
